objects/CaseMgmtTemplateSelection__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Email_Folder__c</fullName>
        <label>Email Folder</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template__c</fullName>
        <label>Email Template</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Spn__c</fullName>
        <label>Issue_Spn</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <label>Issue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Spn__c</fullName>
        <label>Reason_Spn</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>CaseMgmtTemplateSelection</label>
</CustomObject>